chore: upgrade to v4

--- a/site/package.json
+++ b/site/package.json
@@ -5,9 +5,9 @@
   "version": "0.2.0",
   "author": "Jason Lengstorf <jason@lengstorf.com>",
   "dependencies": {
-    "gatsby": "^3.0.0",
-    "gatsby-image": "^3.0.0",
-    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby": "4.15.2",
+    "gatsby-image": "3.11.0",
+    "gatsby-source-filesystem": "4.15.0",
     "gatsby-transformer-cloudinary": "*",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
